# template-python

./: .gitignore  .pre-commit-config.yaml  CRUSH.md  LICENSE  README.md  pyproject.toml
.github/: pytest.yml
.github/workflows/: pytest.yml
tests/: test_version.py
